CSS/blackjack.css
:root{
  --card-width: 17.85vh;
  --card-height:25vh;

}

#gameInfo{
  position: sticky;
  top:0;
  left: 0;
  color: white;
  z-index: 10;
}

body {
    background-image: url("../imgs/simple\ green\ table.jpg");
    background-size: cover;
} 
.stay-above{
  position: sticky;
  top:100;
  left: 0;
  color: white;
}
.player-label{
    font-weight: bolder;
    font-size:large;
}

.player-table-label{
  font-size: 2vh;
}
.section-label{
  color: yellowgreen;
  font-size: 4vh;
}

.table-info-section{
  background-size: 100% 100%;
  background-repeat: no-repeat;
  background-position: center;
}
.player-cards img{
    
    width:var(--card-width) ;
    position: absolute;


}
.player-cards{
  height: var(--card-height);
}

#player1 img:hover {
  transition: transform .5s;
  transform: translateY(-40%);
}

.flip-over {
   
    transform-style: preserve-3d;
    animation-name: flipX;
    animation-duration: .5s;
    animation-iteration-count: initial;
}


.transparent-bar {
    background:linear-gradient(to bottom,rgba(0,0,0,.8),rgba(0,0,0,.8),rgba(0,0,0,.6),rgba(0,0,0,0)); 
}

.transparent-bar-nav {
    background: linear-gradient(to bottom,rgba(0,0,0,1),rgba(0,0,0,.8)); 
}
@keyframes flipX{
    0%{transform: rotateY(90deg);}
    100%{transform: rotateY(0deg);}
}

  /* style css */
  
  .startMainGame {
    position: absolute;
    transition: ease-in 1s;
    /* transform: translateX(0vw); */
  }
  .startMainGame.hide{
    display: none;
    /* transform: translateX(-100vw); */
    transition: ease-in 1s;
  }
  .playerChoices{
    /* display: none; */
    transform: translateY(-100vh);
    transition: linear 0.5s;
  }
  .playerChoices.show{
    display:block;
    transform: translateY(0vw);
    transition: linear 0.5s;
  }  
  .playing-table{
    height: 100vh;
    width: auto;
    position: relative;
  }
  

/* Abbie from here */
.btn-circle:hover {
    transform: scale(1.2)
  }
  .btn-circle{
    cursor: pointer;
  }
  .startMainGame.hide{
    /* z-index: -2; */
    transition: ease-in 0.5s;
  }
  .playerChoices.show{
    /* z-index: 2; */
    transition: linear 0.5s;
  }
  .playerChoices{
    /* z-index: -2; */
    transition: linear 0.5s;
  }
  .btn3d {
    position: relative;
    border: 0;
    width: 10vw;
    min-width: 75px ;
  }

  .btn3d:active:focus,
  .btn3d:focus:hover,
  .btn3d:focus {
  -moz-outline-style: none;
  outline: medium none;
  }
  
  .btn3d:active,
  .btn3d.active {
  top: 2px;
  }
  
  
  .btn3d.btn-default {
  color: #666666;
  box-shadow: 0 0 0 1px #ebebeb inset, 0 0 0 2px rgba(255, 255, 255, 0.10) inset, 0 8px 0 0 #BEBEBE, 0 8px 8px 1px rgba(0, 0, 0, .2);
  background-color: #f9f9f9;
  }
  
  .btn3d.btn-default:active,
  .btn3d.btn-default.active {
  color: #666666;
  box-shadow: 0 0 0 1px #ebebeb inset, 0 0 0 1px rgba(255, 255, 255, 0.15) inset, 0 1px 3px 1px rgba(0, 0, 0, .1);
  background-color: #f9f9f9;
  }
  
  
  
  .btn3d.btn-success {
  box-shadow: 0 0 0 1px #31c300 inset, 0 0 0 2px rgba(255, 255, 255, 0.15) inset, 0 8px 0 0 #5eb924, 0 8px 8px 1px rgba(0, 0, 0, 0.5);
  background-color: #78d739;
  }
  
  .btn3d.btn-success:active,
  .btn3d.btn-success.active {
  box-shadow: 0 0 0 1px #30cd00 inset, 0 0 0 1px rgba(255, 255, 255, 0.15) inset, 0 1px 3px 1px rgba(0, 0, 0, 0.3);
  background-color: #78d739;
  }
  
  .btn3d.btn-info {
  box-shadow: 0 0 0 1px #00a5c3 inset, 0 0 0 2px rgba(255, 255, 255, 0.15) inset, 0 8px 0 0 #348FD2, 0 8px 8px 1px rgba(0, 0, 0, 0.5);
  background-color: #39B3D7;
  }
  
  .btn3d.btn-info:active,
  .btn3d.btn-info.active {
  box-shadow: 0 0 0 1px #00a5c3 inset, 0 0 0 1px rgba(255, 255, 255, 0.15) inset, 0 1px 3px 1px rgba(0, 0, 0, 0.3);
  background-color: #39B3D7;
  }
  
  .btn3d.btn-warning {
  box-shadow: 0 0 0 1px #d79a47 inset, 0 0 0 2px rgba(255, 255, 255, 0.15) inset, 0 8px 0 0 #D79A34, 0 8px 8px 1px rgba(0, 0, 0, 0.5);
  background-color: #FEAF20;
    color: white;
  }
  
  .btn3d.btn-warning:active,
  .btn3d.btn-warning.active {
  box-shadow: 0 0 0 1px #d79a47 inset, 0 0 0 1px rgba(255, 255, 255, 0.15) inset, 0 1px 3px 1px rgba(0, 0, 0, 0.3);
  background-color: #FEAF20;
  }
  
  .btn3d.btn-danger {
  box-shadow: 0 0 0 1px #b93802 inset, 0 0 0 2px rgba(255, 255, 255, 0.15) inset, 0 8px 0 0 #AA0000, 0 8px 8px 1px rgba(0, 0, 0, 0.5);
  background-color: #D73814;
  }
  
  .btn3d.btn-danger:active,
  .btn3d.btn-danger.active {
  box-shadow: 0 0 0 1px #b93802 inset, 0 0 0 1px rgba(255, 255, 255, 0.15) inset, 0 1px 3px 1px rgba(0, 0, 0, 0.3);
  background-color: #D73814;
  }
  
  .btn3d.btn-magick {
  color: #fff;
  box-shadow: 0 0 0 1px #9a00cd inset, 0 0 0 2px rgba(255, 255, 255, 0.15) inset, 0 8px 0 0 #9823d5, 0 8px 8px 1px rgba(0, 0, 0, 0.5);
  background-color: #bb39d7;
  }
  
  .btn3d.btn-magick:active,
  .btn3d.btn-magick.active {
  box-shadow: 0 0 0 1px #9a00cd inset, 0 0 0 1px rgba(255, 255, 255, 0.15) inset, 0 1px 3px 1px rgba(0, 0, 0, 0.3);
  background-color: #bb39d7;
  }
  

  
    
  

